--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,6 +13,7 @@ analyzer:
     included_file_warning: ignore
   exclude:
     - packages/**/example/lib/generated_plugin_registrant.dart
+    - node_modules/**
 
 linter:
   rules:
